src/test/compile-fail/attr-before-view-item2.rs
// error-pattern:expected item

mod m {
  #[foo = "bar"]
  use std;
}

fn main() {
}
